benefits spacing fix

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -2147,10 +2147,20 @@ a.logo.dark:hover{
 	color: #949698;
 }
 
+.benefit-title2{
+	margin: 0 0 17px 0;
+	padding-left: 10px;
+	font-size: 18px;
+	font-weight: 500;
+	letter-spacing: 0px;
+	color: #666;
+	text-align: left;
+}
+
 .benefit-title{
 	margin: 0 0 17px 0;
 	padding-left: 10px;
-	padding-top:40px;
+	padding-top:35px;
 	font-size: 18px;
 	font-weight: 500;
 	letter-spacing: 0px;
